--- a/forecast/ML.ipynb
+++ b/forecast/ML.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "# machine learning\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC, LinearSVC, SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1521, 17), (1521,), (381, 17), (381,))"
+       "((1521, 5), (1521,), (381, 5), (381,))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.utils.validation import column_or_1d\n",
-    "X = processed_df.loc[:,['Year', 'Month', 'Day', 'Hour', 'Minute','Kcal','Protein','돼지고기', '소고기', '닭고기', '오리고기','가공육', '해산물(연체류)', '해산물(생선)', '난류', '유제품', '가공어류(참치)']]\n",
+    "#X = processed_df.loc[:,['Year', 'Month', 'Day', 'Hour', 'Minute','Kcal','Protein','돼지고기', '소고기', '닭고기', '오리고기','가공육', '해산물(연체류)', '해산물(생선)', '난류', '유제품', '가공어류(참치)']]\n",
+    "X = processed_df.loc[:,['Year', 'Month', 'Day', 'Hour', 'Minute']]\n",
     "Y = column_or_1d(processed_df.loc[:,[\"HeadCount\"]])\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.2)\n",
     "X_train.shape, Y_train.shape, X_test.shape, Y_test.shape"
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -329,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "1.64"
+       "2.04"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.38"
+       "-9.23"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +366,7 @@
    "source": [
     "# Support Vector Machines\n",
     "\n",
-    "svc = SVC()\n",
+    "svc = SVR()\n",
     "svc.fit(X_train, Y_train)\n",
     "Y_pred = svc.predict(X_test)\n",
     "acc_svc = round(svc.score(X_train, Y_train) * 100, 2)\n",
@@ -374,23 +375,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35.17"
+       "74.26"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# K-Nearest Neighberhood\n",
-    "knn = KNeighborsClassifier(n_neighbors = 3)\n",
+    "knn = KNeighborsRegressor(n_neighbors = 3)\n",
     "knn.fit(X_train, Y_train)\n",
     "Y_pred = knn.predict(X_test)\n",
     "acc_knn = round(knn.score(X_train, Y_train) * 100, 2)\n",
@@ -399,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21.37"
+       "13.35"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.13"
+       "0.26"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -465,10 +466,10 @@
     {
      "data": {
       "text/plain": [
-       "0.2"
+       "0.53"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,16 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2"
+       "-3.301044781826047e+27"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +503,7 @@
    "source": [
     "# Stochastic Gradient Descent\n",
     "\n",
-    "sgd = SGDClassifier()\n",
+    "sgd = SGDRegressor()\n",
     "sgd.fit(X_train, Y_train)\n",
     "Y_pred = sgd.predict(X_test)\n",
     "acc_sgd = round(sgd.score(X_train, Y_train) * 100, 2)\n",
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +521,7 @@
        "100.0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +529,7 @@
    "source": [
     "# Decision Tree\n",
     "\n",
-    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree = DecisionTreeRegressor()\n",
     "decision_tree.fit(X_train, Y_train)\n",
     "Y_pred = decision_tree.predict(X_test)\n",
     "acc_decision_tree = round(decision_tree.score(X_train, Y_train) * 100, 2)\n",
@@ -537,16 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100.0"
+       "94.3"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +555,7 @@
    "source": [
     "# Random Forest\n",
     "\n",
-    "random_forest = RandomForestClassifier(n_estimators=100)\n",
+    "random_forest = RandomForestRegressor(n_estimators=100)\n",
     "random_forest.fit(X_train, Y_train)\n",
     "Y_pred = random_forest.predict(X_test)\n",
     "random_forest.score(X_train, Y_train)\n",
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -594,68 +595,68 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Random Forest</td>\n",
-       "      <td>100.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>100.00</td>\n",
+       "      <td>1.000000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>9.430000e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>35.17</td>\n",
+       "      <td>7.426000e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Naive Bayes</td>\n",
-       "      <td>21.37</td>\n",
+       "      <td>1.335000e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>1.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Support Vector Machines</td>\n",
-       "      <td>1.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Stochastic Gradient Decent</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>2.040000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Linear SVC</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>5.300000e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Perceptron</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>2.600000e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Support Vector Machines</td>\n",
+       "      <td>-9.230000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stochastic Gradient Decent</td>\n",
+       "      <td>-3.301045e+27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Model   Score\n",
-       "3               Random Forest  100.00\n",
-       "8               Decision Tree  100.00\n",
-       "1                         KNN   35.17\n",
-       "4                 Naive Bayes   21.37\n",
-       "2         Logistic Regression    1.64\n",
-       "0     Support Vector Machines    1.38\n",
-       "6  Stochastic Gradient Decent    0.20\n",
-       "7                  Linear SVC    0.20\n",
-       "5                  Perceptron    0.13"
+       "                        Model         Score\n",
+       "8               Decision Tree  1.000000e+02\n",
+       "3               Random Forest  9.430000e+01\n",
+       "1                         KNN  7.426000e+01\n",
+       "4                 Naive Bayes  1.335000e+01\n",
+       "2         Logistic Regression  2.040000e+00\n",
+       "7                  Linear SVC  5.300000e-01\n",
+       "5                  Perceptron  2.600000e-01\n",
+       "0     Support Vector Machines -9.230000e+00\n",
+       "6  Stochastic Gradient Decent -3.301045e+27"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
